# shennong-os

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  design-qa.md
.github/workflows/: ci.yml  docker-publish.yml
apps/agent-runtime/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/server/: Cargo.toml  Dockerfile  README.md
apps/server/src/: auth.rs  clients.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  rate_limit.rs
apps/server/src/handlers/: admin.rs  agent.rs  authentication.rs  context.rs  data_plane.rs  integration.rs  mod.rs  projects.rs  runtime_control.rs  system.rs
apps/server/tests/: identity_rbac_integration.rs  postgres_integration.rs
apps/web/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
deploy/: .env.example  Caddyfile  README.md  SIMPLE.md  backup-unified.sh  compose.yaml  restore-drill.sh  restore-unified.sh  rootless-data.mount  test-caddy-routes.sh  versions.env.example
deploy/container/: Caddyfile  entrypoint.sh  (+1 more)
docs/: README.md  architecture.md
migrations/: 0001_os_control_plane.sql  0002_ide_access.sql  0003_builtin_skills.sql  0004_governed_project_files.sql  0005_builtin_skill_runtime_profile.sql  0006_run_approvals.sql  0007_llama_cpp_provider.sql  0008_personal_agent_threads.sql  0009_user_profiles.sql  0010_reproducible_r_skill.sql
openapi/: os-api.yaml
skills/: shennong.skill.schema.json
(+176 files in other folders)
