[package]
name = "shennong-os-server"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
axum = { version = "0.8", features = ["json", "macros", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
http = "1"
futures-util = "0.3"
jsonwebtoken = "9.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["connect"] }
tower-http = { version = "0.6", features = ["catch-panic", "limit", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
